--- a/cn/index.html
+++ b/cn/index.html
@@ -201,7 +201,7 @@
         </ul><!-- end details -->
     </div><!-- end sidebar -->
     <div style="font-size: 20px;position: absolute;right: 15px;top: 5px">
-        <a href="http://daisychu.github.io/cv">English Version</a>
+        <a href="http://daisychu.github.io/cv/">English Version</a>
     </div>
     <div id="content">
 
