--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </ul><!-- end details -->
     </div><!-- end sidebar -->
     <div style="font-size: 20px;position: absolute;right: 15px;top: 5px">
-        <a href="http://daisychu.github.io/cv/cn">中文版</a>
+        <a href="http://daisychu.github.io/cv/cn/">中文版</a>
     </div>
     <div id="content">
 
