--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
                             <li>
                                 <strong>Sales/retail:</strong> Merchandising, Visual Merchandising, Retail operation, Training Manager etc.</li>
                             <li>
-                                <strong>Media:</strong> AD, CD, Planning, CRM etc. • HR: HRD, HRBP, HR Supervisor, Recruiter, C&amp;B etc.</li>
+                                <strong>Media:</strong> AD, CD, Planning, CRM etc. </li>
+                            <li>
+                                <strong>HR:</strong> HRD, HRBP, HR Supervisor, Recruiter, C&amp;B etc. </li>
                             <li>
                                 <strong>Finance:</strong> Financial Analysis Manager, AP Manager, GL Accountant, AP/AR etc.</li>
                         </ul><h4>Achievements：</h4>
