--- a/index.html
+++ b/index.html
@@ -231,21 +231,21 @@
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>Bestseller Fashion Group, China <small>2013.8 –2013.11</small></h2>
-            <div class="position">Retail Trainer</div>
+            <h2>Bestseller Fashion Group, China <small>2014.01 – Now</small></h2>
+            <div class="position">HR Consultant</div>
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
-                        <h4 class="inline">Report to:</h4> Regional Training Manager- Jack&amp; Jones
+                        <h4 class="inline">Report to:</h4> Regional IT industry Manager
 
                         <h4>Responsibility:</h4>
 
                         <ul>
-                            <li>Support Regional Training Manager to plan and execute training programs to all levels of staff according to business strategies and development needs</li>
-                            <li>Maintain the SOP training system according to our detailed functional training projects</li>
-                            <li>Familiar with training programs which includes product knowledge, new staff orientation, selling skills and retail management training</li>
-                            <li>Work closely with product and HR Dept. to identify and implement effective training solutions.</li>
+                            <li>Focus on Internet industry, Internet finance, including mini-lending, wealth management and third-party payments.</li>
+                            <li>Responsible for extensive sourcing/recruiting efforts to identify and attract talented IT professionals for wide range of Jr., to Sr., level IT positions. </li>
+                            <li>Provided qualified candidates for a variety of positions; iOS,Android,PHP ,CTO, BigData, Hadoop, Java Web Developers, J2EE applications developers.</li>
+                           
                         </ul></div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
         </div>
 
         <div>
-            <h2>Kenexa <small>2013.4 – 2013.8</small></h2>
+            <h2>Kenexa <small>2013.4 – 2013.9</small></h2>
             <div class="position">Associate Consultant</div>
             <div class="comment-content">
 
