--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
-                        <h4 class="inline">Report to:</h4> Regional IT industry Manager
+                        <h4 class="inline">Report to:</h4> IT Industry Manager
 
                         <h4>Responsibility:</h4>
 
