--- a/cn/index.html
+++ b/cn/index.html
@@ -215,7 +215,7 @@
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body "><ul>
-                        <li>管理咨询公司2年招聘+外资时装公司2个月培训师 </li>
+                        <li>管理咨询公司3年招聘,其中2年消费品行业经验，1年（金融）互联网领域招聘技术、产品岗位招聘经验 </li>
                         <li>较强的调查、分析和项目管理的能力</li>
                         <li>良好的沟通、计划、协作能力</li>
                         <li>强烈的自我驱动意识,善于学习、思考</li>
@@ -227,22 +227,24 @@
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>绫致时装(天津)有限公司上海分公司 <small>2013.8 –2013.11</small></h2>
-            <div class="position">零售培训师</div>
+            <h2>上海斯科人力资源顾问有限公司 <small>2014.01 – 至今</small></h2>
+            <div class="position">招聘顾问-互联网行业</div>
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
-                        <h4 class="inline">汇报对象:</h4> 杰克琼斯Jack &Jones品牌事业部-培训部经理
+                        <h4 class="inline">汇报对象:</h4> 招聘总监-互联网行业
 
                         <h4>主要职责:</h4>
 
                         <ul>
-                            <li>结合新产品和店铺新员工情况拟定培训计划并组织实施</li>
-                            <li>策划培训跟进方案,对培训后的人员进行检查、考核工作</li>
-                            <li>内部期刊杂志素材收集及宣导</li>
-                            <li>SOP系统更新及维护</li>
-                            <li>协助总部培训项目的实施和跟进</li>
+                            <li>通过不同的招聘渠道，经过理解客户的招聘需求，筛选合适的候选人，推荐给客户</li>
+                            <li>与候选人和客户沟通，协调安排客户面试，解决面试中的突发问题</li>
+                            <li>协调薪资谈判及offer的签署</li>
+                            <li>候选人入职前、中、后期的跟踪服务，为候选人提供相应的职业发展建议</li>
+                            <li>和候选人保持良好的持续的沟通关系</li>
+                            <li>BD互联网行业新客户</li>
+                            <li>主要负责职位：iOS、Android、PHP、产品等中高阶职位以及CTO、产品总监等高阶职位</li>
                         </ul></div>
                 </div>
             </div>
@@ -250,7 +252,7 @@
         </div>
 
         <div>
-            <h2>上海肯耐珂萨人才服务有限公司(KENEXA) <small>2013.4 – 2013.8</small></h2>
+            <h2>上海肯耐珂萨人才服务有限公司(KENEXA) <small>2013.04 – 2013.09</small></h2>
             <div class="position">助理顾问AC</div>
             <div class="comment-content">
 
@@ -270,10 +272,7 @@
                             <li>安排并参与候选人面试</li>
                             <li>安排并主持小组周会,整理会议内容</li>
                             <li>定期寻访内部需求,组织开展头脑风暴</li>
-                        </ul>
-                        <h4 class="inline">服务客户:</h4> L’Oreal欧莱雅,Unilever联合利华, Jala伽蓝集团,Draeger Medical德国德尔格医疗器械,Perfetti Van Melle Confectionery不凡帝范梅勒糖果,C&A西雅衣家等。
-                        <br/>
-                        <h4 class="inline">工作业绩:</h4> 3个月成功close三个职位,收集简历近500份。
+                        
                     </div>
                 </div>
             </div>
@@ -281,7 +280,7 @@
         </div>
 
         <div>
-            <h2>上海路盟管理咨询有限公司(ROADMAP) <small>2011.7 – 2013.4</small></h2>
+            <h2>上海路盟管理咨询有限公司(ROADMAP) <small>2011.07 – 2013.04</small></h2>
             <div class="position">助理顾问AC</div>
             <div class="comment-content">
 
@@ -335,10 +334,10 @@
 
         <!-- begin section -->
         <h1 class="orange">Education Background</h1>
-        <h2>上海交通大学 <small>2011.9 – 2014.7 </small></h2>
+        <h2>上海交通大学 <small>2011.09 – 2014.07 </small></h2>
         <div class="position">人力资源管理,本科</div>
         <hr><!-- horizontal rule -->
-        <h2>武汉职业技术学院 <small>2008.9 – 2011.6</small></h2>
+        <h2>武汉职业技术学院 <small>2008.09 – 2011.06</small></h2>
         <div class="position">商务英语, 大专</div>
         <!-- end section -->
 
