--- a/cn/index.html
+++ b/cn/index.html
@@ -253,14 +253,14 @@
 
         <div>
             <h2>上海肯耐珂萨人才服务有限公司(KENEXA) <small>2013.04 – 2013.09</small></h2>
-            <div class="position">助理顾问AC</div>
+            <div class="position">助理顾问-快速消费品行业</div>
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
 
                         <div >
-                            <h4 class="inline" >汇报对象:</h4> FMCG-Team leader高级猎头顾问
+                            <h4 class="inline" >汇报对象:</h4> 快速消费品行业经理
                         </div>
 
                         <h4>主要职责:</h4>
@@ -281,12 +281,12 @@
 
         <div>
             <h2>上海路盟管理咨询有限公司(ROADMAP) <small>2011.07 – 2013.04</small></h2>
-            <div class="position">助理顾问AC</div>
+            <div class="position">助理顾问-消费品行业&广告行业</div>
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
-                        <p><strong>汇报对象:</strong> 资深顾问</p>
+                        <p><strong>汇报对象:</strong> CEO/高级顾问</p>
 
                         <h4>主要职责:</h4>
 
