--- a/cn/index.html
+++ b/cn/index.html
@@ -227,13 +227,13 @@
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>上海斯科人力资源顾问有限公司 <small>2014.01 – 至今</small></h2>
+            <h2>上海斯科人力资源顾问有限公司（SEEKER） <small>2014.01 – 至今</small></h2>
             <div class="position">招聘顾问-互联网行业</div>
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
-                        <h4 class="inline">汇报对象:</h4> 招聘总监-互联网行业
+                        <h4 class="inline">汇报对象:</h4> 互联网行业招聘总监
 
                         <h4>主要职责:</h4>
 
