--- a/cn/index.html
+++ b/cn/index.html
@@ -272,6 +272,7 @@
                             <li>安排并参与候选人面试</li>
                             <li>安排并主持小组周会,整理会议内容</li>
                             <li>定期寻访内部需求,组织开展头脑风暴</li>
+                            <li>主要负责职位：产品专员/经理/总监、品牌经理/总监、公关经理/总监等</li>
                         
                     </div>
                 </div>
