--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body "><ul>
-                        <li>2 Yr's <strong>recruiting</strong> experience in a search firm for some multinational companies, and 2 months experience in a multinational fashion firm as a <strong>trainer</strong>. </li>
+                        <li>More than 3 Yr's <strong>recruiting</strong> experience in search firms for some multinational companies. </li>
+                        <li>Rich recruitment experience in middle position and high level position of Internet, FMCG, New Media, Retail Industry.</li>
                         <li>Good command of <strong>on-line</strong>, <strong>on-phone</strong> research, <strong>cold calls</strong>, consultative selling and
                             communication skills with senior level people from <strong>FMCG</strong>, <strong>Retail</strong> and <strong>Media</strong> areas.</li>
                         <li>Phone screening potential candidates and interview qualified candidates.</li>
@@ -244,6 +245,7 @@
                         <ul>
                             <li>Focus on Internet industry, Internet finance, including mini-lending, wealth management and third-party payments.</li>
                             <li>Responsible for extensive sourcing/recruiting efforts to identify and attract talented IT professionals for wide range of Jr., to Sr., level IT positions. </li>
+                            <li>Relevant industry of information collection and analysis.</li>
                             <li>Provided qualified candidates for a variety of positions; iOS,Android,PHP ,CTO, BigData, Hadoop, Java Web Developers, J2EE applications developers.</li>
                            
                         </ul></div>
@@ -253,7 +255,7 @@
         </div>
 
         <div>
-            <h2>Kenexa <small>2013.4 – 2013.9</small></h2>
+            <h2>Kenexa <small>2013.04 – 2013.09</small></h2>
             <div class="position">Associate Consultant</div>
             <div class="comment-content">
 
@@ -272,8 +274,7 @@
                             <li>Communicate between team leader &amp; candidate; share the market knowledge with team leader, control candidate especially in salary negotiation stage.</li>
                             <li>Candidate assessment &amp; provide report to client.</li>
                             <li>Share industry information internally with colleagues. </li>
-                        </ul>
-                        <h4 class="inline">Achievements:</h4> 3offers (Dealer Manager, Product Specialist, Assistant Brand Manager)
+                        
                     </div>
                 </div>
             </div>
@@ -281,7 +282,7 @@
         </div>
 
         <div>
-            <h2>Roadmap Consulting, Shanghai <small>2011.7 – 2013.4</small></h2>
+            <h2>Roadmap Consulting, Shanghai <small>2011.07 – 2013.04</small></h2>
             <div class="position">Associate Consultant</div>
             <div class="comment-content">
 
@@ -329,10 +330,10 @@
 
         <!-- begin section -->
         <h1 class="orange">Education Background</h1>
-        <h2>Shanghai Jiao Tong University <small>2011.9 – 2014.7 </small></h2>
+        <h2>Shanghai Jiao Tong University <small>2011.09 – 2014.07 </small></h2>
         <div class="position">Human Resource Management, Bachelor</div>
         <hr><!-- horizontal rule -->
-        <h2>Wuhan Polytechnic <small>2008.9 – 2011.6</small></h2>
+        <h2>Wuhan Polytechnic <small>2008.09 – 2011.06</small></h2>
         <div class="position">Business English, Junior College</div>
         <!-- end section -->
 
