--- a/index.html
+++ b/index.html
@@ -261,10 +261,8 @@
 
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
-                        <h4 class="inline" >Industry focused:</h4> FMCG
-
-                        <div >
-                            <h4 class="inline" style="margin-top:0 " >Report to:</h4> Team leader
+                       
+                            <h4 class="inline" style="margin-top:0 " >Report to:</h4> FMCG Industry Team leader
                         </div>
 
                         <h4>Responsibility:</h4>
@@ -274,6 +272,8 @@
                             <li>Communicate between team leader &amp; candidate; share the market knowledge with team leader, control candidate especially in salary negotiation stage.</li>
                             <li>Candidate assessment &amp; provide report to client.</li>
                             <li>Share industry information internally with colleagues. </li>
+                            <li>Responsible for recruitment work for clients like Unilever,L'Oreal and NIVEA,
+                            including the Product Manager,Brand Manager and Marketing Manager. </li>
                         
                     </div>
                 </div>
