--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>Bestseller Fashion Group, China <small>2014.01 – Now</small></h2>
+            <h2>Seeker <small>2014.01 – Now</small></h2>
             <div class="position">HR Consultant</div>
             <div class="comment-content">
 
