--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body ">
                        
-                            <h4 class="inline" style="margin-top:0 " >Report to:</h4> FMCG Industry Team leader
+                            <h4 class="inline">Report to:</h4> FMCG Industry Team leader
 
                         <h4>Responsibility:</h4>
 
