--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
-                    <div class="js-comment-body comment-body markdown-body "><p><strong>Industry focused:</strong> Retail, FMCG, Media etc.<br><strong>Report to:</strong> Consultant</p>
+                    <div class="js-comment-body comment-body markdown-body "><p><strong>Industry focused:</strong> Retail, FMCG, Media etc.<br><strong>Report to:</strong> CEO/Sr.Consultant</p>
 
                         <h4>Responsibility:</h4>
 
