--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
                 <div class="edit-comment-hide">
                     <div class="js-comment-body comment-body markdown-body "><ul>
                         <li>More than 3 Yr's <strong>recruiting</strong> experience in search firms for some multinational companies. </li>
-                        <li>Rich recruitment experience in middle position and high level position of Internet, FMCG, New Media, Retail Industry.</li>
+                        <li>Rich recruitment experience in middle position and high level position of Internet, FMCG, Retail Industry.</li>
                         <li>Good command of <strong>on-line</strong>, <strong>on-phone</strong> research, <strong>cold calls</strong>, consultative selling and
-                            communication skills with senior level people from <strong>FMCG</strong>, <strong>Retail</strong> and <strong>Media</strong> areas.</li>
+                            communication skills with senior level people from <strong>Internet</strong>,  <strong>FMCG</strong> and <strong>Retail</strong> areas.</li>
                         <li>Phone screening potential candidates and interview qualified candidates.</li>
                         <li>Will-do and can-do attitude and <strong>positive, diligent, target-oriented and result-driven</strong>
                             personality.</li>
