--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ meaningful way that drives talent strategy.</li>
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>Seeker <small>Jan.2022 – Feb 2023</small></h2>
+            <h2>Varis (Acquired by The ODP Corporation)<small>Jan.2022 – Feb 2023</small></h2>
             <div class="position">Senior Talent Acquisition Manager</div>
             <div class="comment-content">
 
