--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ meaningful way that drives talent strategy.</li>
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>Varis (Acquired by The ODP Corporation)<small>Jan.2022 – Feb 2023</small></h2>
+            <h2>Varis (acquired by The ODP Corporation)<small>Jan.2022 – Feb 2023</small></h2>
             <div class="position">Senior Talent Acquisition Manager</div>
             <div class="comment-content">
 
@@ -294,7 +294,7 @@ members within a year.</li>
 <li>Organized an <strong>online hiring event</strong> on Clubhouse, attracting 300+ participants and gaining recognition from the CTO.</li>
 <li>Reduced <strong>time to fill</strong> from 90 to 45 days and increased <strong>offer acceptance rate </strong>from 35% to 60%. </li>
         
-HR Related:
+ <strong> HR Related:</strong>
 <li><strong>New Hiring Manager Training</strong>: Conducted training for new hiring managers on recruiting processes, including organizational structure, interview processes, job requisition openings, leveling guidelines, and offer processes.</li>
 <li><strong>Recruiter Training</strong>: Led "Learning Hour" recruiter training program and created documentation for "Recruiter University".</li>
 <li><strong>Recruitment Survey</strong>: Managed candidate and employee recruitment surveys, evaluated company reviews on social media platforms.</li>
