--- a/index.html
+++ b/index.html
@@ -309,12 +309,13 @@ members within a year.</li>
         </div>
 
         <div>
-            <h2>Roadmap Consulting, Shanghai <small>2011.07 – 2013.04</small></h2>
-            <div class="position">Associate Consultant</div>
+            <h2>Chinasoft International <small>May 2018 – Dec 2020</small></h2>
+            <div class="position">Lead Technical Recruiter</div>
             <div class="comment-content">
 
                 <div class="edit-comment-hide">
-                    <div class="js-comment-body comment-body markdown-body "><p><strong>Industry focused:</strong> Retail, FMCG, Media etc.<br><strong>Report to:</strong> CEO/Sr.Consultant</p>
+                    <div class="js-comment-body comment-body markdown-body "><p> Chinasoft International (0354.HK) is an IT service management company that offers application development and outsourcing services.<br><strong>Report to:
+                        Global Talent VP/GM</p>
 
                         <h4>Responsibility:</h4>
 
