--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ meaningful way that drives talent strategy.</li>
 
         <h1 class="blue">Working Experience</h1>
         <div>
-            <h2>Varis (acquired by The ODP Corporation)<small>Jan.2022 – Feb 2023</small></h2>
+            <h2>Varis (acquired by The ODP Corporation), Seattle, WA <small>Jan.2022 – Feb 2023</small></h2>
             <div class="position">Senior Talent Acquisition Manager</div>
             <div class="comment-content">
 
@@ -269,7 +269,7 @@ Mexico through weekly/bi-weekly recruitment meetings and <strong>talent reports<
         </div>
 
         <div>
-            <h2>TuSimple <small>Dec.2020 – Jan 20022</small></h2>
+            <h2>TuSimple, Seattle, WA  <small>Dec.2020 – Jan 20022</small></h2>
             <div class="position">Lead Talent Acquisition</div>
             <div class="comment-content">
 
@@ -309,7 +309,7 @@ members within a year.</li>
         </div>
 
         <div>
-            <h2>Chinasoft International <small>May 2018 – Dec 2020</small></h2>
+            <h2>Chinasoft International, Bellevue, WA <small>May 2018 – Dec 2020</small></h2>
             <div class="position">Lead Technical Recruiter</div>
             <div class="comment-content">
 
